<resources>
    <string name="app_name">Near Me</string>
    <string name="my_profile">Il mio profilo</string>
    <string name="my_group">Il mio gruppo</string>
    <string name="my_pub">Il mio locale</string>
    <string name="settings">Impostazioni</string>
    <string name="my_account">Account</string>
    <string name="add_group">Aggiungi gruppo</string>
    <string name="add_pub">Aggiungi un locale</string>
    <string name="change_email">Cambia email</string>
    <string name="change_pw">Cambia password</string>
    <string name="delete_account">Elimina profilo</string>
    <string name="log_out">Esci</string>
    <string name="map">Mappa</string>
    <string name="events">Eventi</string>
    <string name="artists">Artisti</string>
    <string name="pubs">Locali</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="Planets">
        <item>Sun</item>
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
