<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:id="@+id/settings"
        android:checkableBehavior="single">

                <item
                    android:id="@+id/change_email"
                    android:title="@string/change_email"
                    android:onClick="OnMenuItemClickListener"/>
                <item
                    android:id="@+id/change_pw"
                    android:title="@string/change_pw"
                    android:onClick="OnMenuItemClickListener" />
                <item
                    android:id="@+id/delete_account"
                    android:title="@string/delete_account"
                    android:onClick="OnMenuItemClickListener" />

    </group>
    <group android:id="@+id/account"
        android:checkableBehavior="single">

            <item
                android:id="@+id/add_group"
                android:title="@string/add_group"
                android:onClick="OnMenuItemClickListener"/>
            <item
                android:id="@+id/add_pub"
                android:title="@string/add_pub"
                android:onClick="OnMenuItemClickListener" />

</group>
    <group android:id="@+id/logout"
        android:checkableBehavior="single">
        <item
            android:id="@+id/log_out"
            android:title="@string/log_out"
            android:onClick="OnMenuItemClickListener" />
    </group>
</menu>