<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single" android:id="@+id/menu">
        <item
            android:id="@+id/my_profile"
            android:title="@string/my_profile"
            android:onClick="OnMenuItemClickListener"/>
        <item
            android:id="@+id/add_group"
            android:title="@string/add_group"
            android:onClick="OnMenuItemClickListener" />
        <item
            android:id="@+id/add_pub"
            android:title="@string/add_pub"
            android:onClick="OnMenuItemClickListener" />
    </group>

    <!--<ListView android:id="@android:id/list_artist"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_weight="1"-->
        <!--android:drawSelectorOnTop="false">-->
    <!--</ListView>-->


    <!--<ListView android:id="@android:id/list_pub"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_weight="1"-->
        <!--android:drawSelectorOnTop="false">-->
    <!--</ListView>-->

</menu>